removed database stuff

--- a/nbproject/platform.properties
+++ b/nbproject/platform.properties
@@ -1,11 +1,27 @@
-branding.token=suite12
+branding.token=puppetstate
 cluster.path=\
     ${nbplatform.active.dir}/ide:\
     ${nbplatform.active.dir}/nb:\
     ${nbplatform.active.dir}/platform
 disabled.modules=\
+    org.netbeans.modules.autoupdate.pluginimporter,\
+    org.netbeans.modules.bugzilla.exceptionreporter,\
+    org.netbeans.modules.db,\
+    org.netbeans.modules.db.core,\
+    org.netbeans.modules.db.dataview,\
+    org.netbeans.modules.db.drivers,\
+    org.netbeans.modules.db.kit,\
+    org.netbeans.modules.db.metadata.model,\
+    org.netbeans.modules.db.mysql,\
+    org.netbeans.modules.db.sql.editor,\
+    org.netbeans.modules.db.sql.visualeditor,\
+    org.netbeans.modules.dbapi,\
+    org.netbeans.modules.derby,\
+    org.netbeans.modules.glassfish.common,\
+    org.netbeans.modules.ide.branding,\
     org.netbeans.modules.ide.branding.kit,\
     org.netbeans.modules.jellytools.ide,\
+    org.netbeans.modules.uihandler.exceptionreporter,\
     org.netbeans.modules.updatecenters,\
     org.netbeans.modules.welcome,\
     org.netbeans.upgrader
