removed deprecated libraries

--- a/nbproject/platform.properties
+++ b/nbproject/platform.properties
@@ -4,6 +4,8 @@ cluster.path=\
     ${nbplatform.active.dir}/nb:\
     ${nbplatform.active.dir}/platform
 disabled.modules=\
+    org.jdesktop.layout,\
+    org.netbeans.libs.jsr223,\
     org.netbeans.modules.autoupdate.pluginimporter,\
     org.netbeans.modules.bugzilla.exceptionreporter,\
     org.netbeans.modules.db,\
@@ -21,8 +23,12 @@ disabled.modules=\
     org.netbeans.modules.ide.branding,\
     org.netbeans.modules.ide.branding.kit,\
     org.netbeans.modules.jellytools.ide,\
+    org.netbeans.modules.projectui.buildmenu,\
     org.netbeans.modules.uihandler.exceptionreporter,\
     org.netbeans.modules.updatecenters,\
     org.netbeans.modules.welcome,\
-    org.netbeans.upgrader
+    org.netbeans.upgrader,\
+    org.openide.compat,\
+    org.openide.options,\
+    org.openide.util.enumerations
 nbplatform.active=default
