--- a/nbproject/platform.properties
+++ b/nbproject/platform.properties
@@ -5,6 +5,8 @@ cluster.path=\
 disabled.modules=\
     org.jdesktop.layout,\
     org.netbeans.libs.jsr223,\
+    org.netbeans.libs.junit4,\
+    org.netbeans.libs.testng,\
     org.netbeans.modules.db,\
     org.netbeans.modules.db.core,\
     org.netbeans.modules.db.dataview,\
