--- a/nbproject/platform.properties
+++ b/nbproject/platform.properties
@@ -3,25 +3,96 @@ cluster.path=\
     ${nbplatform.active.dir}/ide:\
     ${nbplatform.active.dir}/platform
 disabled.modules=\
+    org.apache.commons.codec,\
+    org.apache.commons.httpclient,\
+    org.apache.commons.io,\
+    org.apache.commons.lang,\
+    org.apache.ws.commons.util,\
+    org.apache.xmlrpc,\
+    org.eclipse.core.contenttype,\
+    org.eclipse.core.jobs,\
+    org.eclipse.core.net,\
+    org.eclipse.core.runtime,\
+    org.eclipse.core.runtime.compatibility.auth,\
+    org.eclipse.equinox.app,\
+    org.eclipse.equinox.common,\
+    org.eclipse.equinox.preferences,\
+    org.eclipse.equinox.registry,\
+    org.eclipse.equinox.security,\
+    org.eclipse.mylyn.bugzilla.core,\
+    org.eclipse.mylyn.commons.core,\
+    org.eclipse.mylyn.commons.net,\
+    org.eclipse.mylyn.commons.xmlrpc,\
+    org.eclipse.mylyn.tasks.core,\
     org.jdesktop.layout,\
+    org.netbeans.api.debugger,\
+    org.netbeans.api.visual,\
+    org.netbeans.core.io.ui,\
+    org.netbeans.core.nativeaccess,\
+    org.netbeans.core.osgi,\
+    org.netbeans.libs.commons_net,\
+    org.netbeans.libs.ini4j,\
+    org.netbeans.libs.jaxb,\
     org.netbeans.libs.jsr223,\
     org.netbeans.libs.junit4,\
+    org.netbeans.libs.smack,\
+    org.netbeans.libs.svnClientAdapter,\
+    org.netbeans.libs.svnClientAdapter.javahl,\
+    org.netbeans.libs.svnClientAdapter.svnkit,\
     org.netbeans.libs.testng,\
-    org.netbeans.modules.db,\
-    org.netbeans.modules.db.core,\
-    org.netbeans.modules.db.dataview,\
+    org.netbeans.modules.applemenu,\
+    org.netbeans.modules.bugtracking,\
+    org.netbeans.modules.bugtracking.bridge,\
+    org.netbeans.modules.bugzilla,\
+    org.netbeans.modules.code.analysis,\
     org.netbeans.modules.db.drivers,\
     org.netbeans.modules.db.kit,\
-    org.netbeans.modules.db.metadata.model,\
-    org.netbeans.modules.db.mysql,\
     org.netbeans.modules.db.sql.editor,\
     org.netbeans.modules.db.sql.visualeditor,\
-    org.netbeans.modules.dbapi,\
     org.netbeans.modules.derby,\
+    org.netbeans.modules.editor.global.format,\
+    org.netbeans.modules.editor.indent.project,\
+    org.netbeans.modules.extexecution.destroy,\
     org.netbeans.modules.glassfish.common,\
+    org.netbeans.modules.gototest,\
+    org.netbeans.modules.gsf.codecoverage,\
+    org.netbeans.modules.gsf.testrunner,\
+    org.netbeans.modules.hudson,\
+    org.netbeans.modules.hudson.git,\
+    org.netbeans.modules.hudson.mercurial,\
+    org.netbeans.modules.hudson.subversion,\
+    org.netbeans.modules.hudson.tasklist,\
     org.netbeans.modules.jellytools.ide,\
-    org.netbeans.modules.projectui.buildmenu,\
+    org.netbeans.modules.keyring.impl,\
+    org.netbeans.modules.languages,\
+    org.netbeans.modules.localhistory,\
+    org.netbeans.modules.mercurial,\
+    org.netbeans.modules.parsing.ui,\
+    org.netbeans.modules.project.ant,\
+    org.netbeans.modules.properties.syntax,\
+    org.netbeans.modules.schema2beans,\
+    org.netbeans.modules.server,\
+    org.netbeans.modules.spellchecker,\
+    org.netbeans.modules.spellchecker.bindings.htmlxml,\
+    org.netbeans.modules.spellchecker.bindings.properties,\
+    org.netbeans.modules.spellchecker.dictionary_en,\
+    org.netbeans.modules.spellchecker.kit,\
+    org.netbeans.modules.spi.actions,\
+    org.netbeans.modules.subversion,\
+    org.netbeans.modules.swing.validation,\
+    org.netbeans.modules.target.iterator,\
+    org.netbeans.modules.utilities.project,\
+    org.netbeans.modules.versioning.indexingbridge,\
+    org.netbeans.modules.versioning.masterfs,\
+    org.netbeans.modules.versioning.system.cvss.installer,\
+    org.netbeans.modules.versioning.ui,\
+    org.netbeans.modules.xml.jaxb.api,\
+    org.netbeans.modules.xml.multiview,\
+    org.netbeans.modules.xml.wsdl.model,\
+    org.netbeans.spi.debugger.ui,\
+    org.netbeans.spi.viewmodel,\
     org.openide.compat,\
     org.openide.options,\
-    org.openide.util.enumerations
+    org.openide.util.enumerations,\
+    org.openidex.util
 nbplatform.active=default
