--- a/branding/core/core.jar/org/netbeans/core/startup/Bundle.properties
+++ b/branding/core/core.jar/org/netbeans/core/startup/Bundle.properties
@@ -1,5 +1,6 @@
 currentVersion=Puppet State {0}
 LBL_splash_window_title=Starting Puppet State
+SPLASH_WIDTH=470
 SplashProgressBarBounds=0,249,473,3
 SplashProgressBarColor=0xFFFF00
 SplashRunningTextBounds=10,235,450,12
