--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -6,7 +6,7 @@ auxiliary.org-netbeans-modules-apisupport-installer.os-linux=false
 auxiliary.org-netbeans-modules-apisupport-installer.os-macosx=false
 auxiliary.org-netbeans-modules-apisupport-installer.os-solaris=false
 auxiliary.org-netbeans-modules-apisupport-installer.os-windows=true
-auxiliary.org-netbeans-modules-apisupport-installer.pack200-enabled=true
+auxiliary.org-netbeans-modules-apisupport-installer.pack200-enabled=false
 modules=\
     ${project.com.tropyx.nb_puppet}
 project.com.tropyx.nb_puppet=../NetBeansPuppet
