Added Branding Module

--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -2,11 +2,13 @@ app.icon=branding/core/core.jar/org/netbeans/core/startup/frame48.gif
 app.name=${branding.token}
 app.title=Puppet State
 auxiliary.org-netbeans-modules-apisupport-installer.license-type=no
-auxiliary.org-netbeans-modules-apisupport-installer.os-linux=false
+auxiliary.org-netbeans-modules-apisupport-installer.os-linux=true
 auxiliary.org-netbeans-modules-apisupport-installer.os-macosx=false
 auxiliary.org-netbeans-modules-apisupport-installer.os-solaris=false
 auxiliary.org-netbeans-modules-apisupport-installer.os-windows=true
 auxiliary.org-netbeans-modules-apisupport-installer.pack200-enabled=false
 modules=\
-    ${project.com.tropyx.nb_puppet}
+    ${project.com.tropyx.nb_puppet}:\
+    ${project.org.netbeans.brandingmodule}
 project.com.tropyx.nb_puppet=../NetBeansPuppet
+project.org.netbeans.brandingmodule=BrandingModule
