--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -2,9 +2,9 @@ app.icon=branding/core/core.jar/org/netbeans/core/startup/frame48.gif
 app.name=${branding.token}
 app.title=Puppet State
 auxiliary.org-netbeans-modules-apisupport-installer.license-type=gpl.v2
-auxiliary.org-netbeans-modules-apisupport-installer.os-linux=false
-auxiliary.org-netbeans-modules-apisupport-installer.os-macosx=false
-auxiliary.org-netbeans-modules-apisupport-installer.os-solaris=false
+auxiliary.org-netbeans-modules-apisupport-installer.os-linux=true
+auxiliary.org-netbeans-modules-apisupport-installer.os-macosx=true
+auxiliary.org-netbeans-modules-apisupport-installer.os-solaris=true
 auxiliary.org-netbeans-modules-apisupport-installer.os-windows=true
 auxiliary.org-netbeans-modules-apisupport-installer.pack200-enabled=false
 modules=\
